Reset main branch with full backend + frontend project